Something went wrong, I deleted about italian content? Fixed

--- a/aboutit.html
+++ b/aboutit.html
@@ -42,40 +42,43 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>DaVinci University received the top qualification</h1> <span>26 October 2017</span> </div>
+				<h2>Su Da Vinci University</h2>
 				<p>
-					In 2017 DaVinci University received the top qualification in the HBO Selection Guide. The themes: teachers, preparation career care, guidance and testing among other things made this qualification possible.<br><br>
-					DaVinci University Executive Board:<br>
-					“Together with all the teachers and students we made sure this could happen. We will of course not stop with making the university even better. We are now focusing more on international education and strive to make the university a university for everyone. No matter where you are in the world you should be able to get education of a high quality.”<br><br>
-					Students of DaVinci University:<br>
-					“At school I feel listened too, they take my input serious and really want to help you.”<br>
-					“At first I wasn’t really sure about the way they teach, but after a while I got used to it and it learned me to take initiative.”<br>
-					“I really think they made me valuable for a company. The way they teached was to prepare us for life after school. I think it works since during my internship I got offered a job.”<br>
+					Quando arriverai alla nostra università vedrai subito che si incarna perfettamente il significato del suo nome. Siamo come Da Vinci - uniamo varie discipline in un unico luogo, portiamo tutto insieme e lo facciamo lavorare come una macchina ben costruita.
 				</p>
+
 			</article>
 
 			<article>
-				<div><h1>“Jump-start your job search” great success</h1> <span>13 September 2017</span> </div>
+				<h2>Il Nostro Logo</h2>
 				<p>
-					In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education. The first session had a big turn up.<br><br>
-					During one of these session. Companies tell you what they look for when hiring and offer advice for those just embarking on a career.
-					Not only will you receive advice, you actually get to talk with the companies and you might even got a shot at getting a job after you graduate.<br><br>
-					Only graduate students can sign up for these sessions.The sessions are there to prepare you for after you graduate. During these sessions DaVinci University invites companies to talk about how to access someone and how you might be able to get that job you want so badly.<br><br>
-					You can sign up for these session at the information desk in the University building. If you sign up you get a program of the companies attending per week.
+					Il nostro logo è un modello virtuale del famoso uomo Vitruviano di Da Vinci. Come si sa, l'uomo Vitruviano è una rappresentazione visiva dei canoni della proporzione. L'uomo e l'architettura si uniscono perfettamente insieme in un'unica immagine della proporzione del tutto. Così come la nostra univerità - uniamo uomo e disciplina, portando insime le due e dandosi il meglio a vicenda.
 				</p>
+
 			</article>
 
 			<article>
-				<div><h1>DaVinci University student won the Luthier price</h1> <span>23 August 2017</span> </div>
+				<h2>Facoltà Della Da Vinci University</h2>
 				<p>
-					8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day.<br>
-					There are prizes to win for the categories: Violin, Guitar, Cello, Viola and Bass guitar.<br><br>
-					DaVinci University’s students also joined this year for the first time. DaVinci University offers different courses on building instruments.<br><br>
-					This year our very own Neka Albin won the first prize in the violin category.<br>
-					“I had been learning to make all different kind of instruments, but the making of a violin spoke to me the most so I signed up for that category. At DaVinci University I learned all the techniques I used during this competition. I didn’t think someone who only learned luthing 2 years ago was able to win.”<br><br>
-					We as a school are very proud at all our students that attended the competition. Once school starts we will evaluate their instruments and work on them even more, to make the perfect instrument.
-
+					La nostrà univerità ha al momento due location. Situata in Emmen e Groningen. Entrambe le location sono completamente aperte a tutti gli studenti della Da Vinci University, a prescindere dal campus di appartenenza. Perciò, grazie alla poca distanza tra le due, tutti gli studenti sono i benvenuti a usare le apparechiature da entrambi i campus.
 				</p>
+
+			</article>
+
+			<article>
+				<h2>Corsi Disponibili</h2>
+				<p>
+					La nostra univerità fornisce una varietà di corse tra cui scegliere. Per i più tecnici abbiamo il corso di Ingegneria Elettronica. Per quelli ansiosi di sapere tutto abbiamo Ingegneria Informatica. Per i romantici creatori abbiamo un corso di Costruzione di Strumenti Classici. E, ovviamete, possiamo accomodare i più vivaci e tecno-friendly studenti con il nostro corso di Musica Elettronica.
+				</p>
+
+			</article>
+
+			<article>
+				<h2>Stile di Apprendimento</h2>
+				<p>
+					Per la nostra univerità abbiamo scelto un diverso modo per ottenere le abbilità e l'educazione. Abbiamo deciso che il modo migliore di preparare gli studenti al mondo reale fosse quello di dargli dei punti di vista sia pratici che teorici. Questo significa che, apparte i nostri labboratori più pratici, abbiamo anche un programma basato sull'apprendimento, dove gli studenti prendono un caso e, grazie ad approcci teoretici, provano a trovare una soluzione.
+				</p>
+
 			</article>
 		</div>
 
@@ -95,7 +98,7 @@
 				</div>
 			</div>
 			<div>
-				Weather
+				Previsioni
 			</div>
 			<div id="social">
 				<div>
