--- a/newsit.html
+++ b/newsit.html
@@ -43,16 +43,42 @@
 	</div>
 	<div class="wrapper">
 		<div id="content">
-			<?php
-				foreach($newsitems as $newsitem){
-					echo "
-					<article>
-						<div><h1>".$newsitem['title']."</h1> <span>".$newsitem['date']."</span> </div>
-						<p>".$newsitem['description']."</p>
-					</article>
-					";
-				}
-			?>
+			<article>
+				<h2>DaVinci University received the top qualification</h2> <span>26 October 2017</span>
+				<p>
+					In 2017 DaVinci University received the top qualification in the HBO Selection Guide. The themes: teachers, preparation career care, guidance and testing among other things made this qualification possible.<br><br>
+					DaVinci University Executive Board:<br>
+					“Together with all the teachers and students we made sure this could happen. We will of course not stop with making the university even better. We are now focusing more on international education and strive to make the university a university for everyone. No matter where you are in the world you should be able to get education of a high quality.”<br><br>
+					Students of DaVinci University:<br>
+					“At school I feel listened too, they take my input serious and really want to help you.”<br>
+					“At first I wasn’t really sure about the way they teach, but after a while I got used to it and it learned me to take initiative.”<br>
+					“I really think they made me valuable for a company. The way they teached was to prepare us for life after school. I think it works since during my internship I got offered a job.”<br>
+				</p>
+			</article>
+
+			<article>
+				<h2>“Jump-start your job search” great success</h2> <span>13 September 2017</span>
+				<p>
+					In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education. The first session had a big turn up.<br><br>
+					During one of these session. Companies tell you what they look for when hiring and offer advice for those just embarking on a career.
+					Not only will you receive advice, you actually get to talk with the companies and you might even got a shot at getting a job after you graduate.<br><br>
+					Only graduate students can sign up for these sessions.The sessions are there to prepare you for after you graduate. During these sessions DaVinci University invites companies to talk about how to access someone and how you might be able to get that job you want so badly.<br><br>
+					You can sign up for these session at the information desk in the University building. If you sign up you get a program of the companies attending per week.
+				</p>
+			</article>
+
+			<article>
+				<h2>DaVinci University student won the Luthier price</h2> <span>23 August 2017</span>
+				<p>
+					8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day.<br>
+					There are prizes to win for the categories: Violin, Guitar, Cello, Viola and Bass guitar.<br><br>
+					DaVinci University’s students also joined this year for the first time. DaVinci University offers different courses on building instruments.<br><br>
+					This year our very own Neka Albin won the first prize in the violin category.<br>
+					“I had been learning to make all different kind of instruments, but the making of a violin spoke to me the most so I signed up for that category. At DaVinci University I learned all the techniques I used during this competition. I didn’t think someone who only learned luthing 2 years ago was able to win.”<br><br>
+					We as a school are very proud at all our students that attended the competition. Once school starts we will evaluate their instruments and work on them even more, to make the perfect instrument.
+
+				</p>
+			</article>
 		</div>
 
 		<aside>
