something with links again

--- a/newsit.html
+++ b/newsit.html
@@ -31,13 +31,13 @@
 	</header>
 	<div id="navWrap">
 		<nav>
-			<ul>	
+			<ul>
 				<li><a href="indexit.html">Home</a></li>
-				<li><a href="aboutit.html">About</a></li>
-				<li><a href="coursesit.html">Courses</a></li>
-				<li><a href="eventsit.html">Events</a></li>
-				<li id="active"><a href="newsit.html">News</a></li>
-				<li><a href="contactit.php">Contact</a></li>
+				<li><a href="aboutit.html">Su di noi</a></li>
+				<li><a href="coursesit.html">Corsi</a></li>
+				<li><a href="eventsit.html">Eventi</a></li>
+				<li id="active"><a href="newsit.html">Novità</a></li>
+				<li><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
 	</div>
