same as previous

--- a/eventsit.html
+++ b/eventsit.html
@@ -44,7 +44,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h2>Open Day</h2></div>
+				<h2>Open Day</h2>
 				<p>
 				L'Open Day ti darà la possibilità di incontrare gli insegnanti del primo corso di studio e di scoprire di più su cosa studierai qui.</p>
 
@@ -54,13 +54,13 @@
 				</p>
 			</article>
 			<article>
-				<div><h2>Study Choice</h2></div>
+				<h2>Study Choice</h2>
 				<p>
 				Lo Study Choice è uno degli eventi più importanti a cui si può partecipare, puoi trovare più informazioni sulle tue scelte di studio che offriamo e capire meglio ciò che l'università ha da offrire.
 				</p>
 			</article>
 			<article>
-				<div><h2>International Day</h2></div>
+				<h2>International Day</h2>
 				<p>
 				L' International Day alla Da Vinci University è una grande opportunità per avere un migliore inizio. Imparerai cose importanti e pratiche da fare nella prima settimana, le esperienze accademiche e sociali alla Da Vinci, e incontrerai nuovi amici. Unisciti subito e impara di più sui club e le società, opportunità di volontariato, e il supporto disponibile per te che sei uno studente internazionale. 
 				</p>
