Made RSS feed. Gerrit helped me with it. Going to import it on overy page. Need to change every page extension to php now

--- a/aboutit.html
+++ b/aboutit.html
@@ -34,7 +34,7 @@
 				<li id="active"><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
-				<li><a href="newsit.html">Novità</a></li>
+				<li><a href="newsit.php">Novità</a></li>
 				<li><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
@@ -130,7 +130,7 @@
 					<li><a href="aboutit.html">Su di noi</a></li>
 					<li><a href="coursesit.html">Corsi</a></li>
 					<li><a href="eventsit.html">Eventi</a></li>
-					<li><a href="newsit.html">Novità</a></li>
+					<li><a href="newsit.php">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
 			</div>
