--- a/indexit.html
+++ b/indexit.html
@@ -34,7 +34,7 @@
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
-				<li><a href="newsit.html">Novità</a></li>
+				<li><a href="newsit.php">Novità</a></li>
 				<li><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
@@ -122,7 +122,7 @@
 					<li><a href="aboutit.html">Su di noi</a></li>
 					<li><a href="coursesit.html">Corsi</a></li>
 					<li><a href="eventsit.html">Eventi</a></li>
-					<li><a href="newsit.html">Novità</a></li>
+					<li><a href="newsit.php">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
 			</div>
