--- a/contactit.html
+++ b/contactit.html
@@ -37,7 +37,7 @@
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
-				<li><a href="newsit.html">Novità</a></li>
+				<li><a href="newsit.php">Novità</a></li>
 				<li id="active"><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
@@ -177,7 +177,7 @@
 					<li><a href="aboutit.html">Su di noi</a></li>
 					<li><a href="coursesit.html">Corsi</a></li>
 					<li><a href="eventsit.html">Eventi</a></li>
-					<li><a href="newsit.html">Novità</a></li>
+					<li><a href="newsit.php">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
 			</div>
