--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
 				<li id="active"><a href="events.html">Events</a></li>
-				<li><a href="news.html">News</a></li>
+				<li><a href="news.php">News</a></li>
 				<li><a href="contact.php">Contact</a></li>
 
 			</ul>
@@ -121,7 +121,7 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="events.html">Events</a></li>
-					<li><a href="news.html">News</a></li>
+					<li><a href="news.php">News</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
