Same as previous.(hadnt staged all the files per accident)

--- a/contactit.html
+++ b/contactit.html
@@ -33,10 +33,10 @@
 	<div id="navWrap">
 		<nav>
 			<ul>	
-				<li><a href="indexit.html">Home</a></li>
-				<li><a href="aboutit.html">Su di noi</a></li>
-				<li><a href="coursesit.html">Corsi</a></li>
-				<li><a href="eventsit.html">Eventi</a></li>
+				<li><a href="indexit.php">Home</a></li>
+				<li><a href="aboutit.php">Su di noi</a></li>
+				<li><a href="coursesit.php">Corsi</a></li>
+				<li><a href="eventsit.php">Eventi</a></li>
 				<li><a href="newsit.php">Novità</a></li>
 				<li id="active"><a href="contactit.php">Contatti</a></li>
 			</ul>
@@ -173,10 +173,10 @@
 			<div class="footBox">
 				<h3>Da Vinci University</h3>
 				<ul>
-					<li><a href="indexit.html">Home</a></li>
-					<li><a href="aboutit.html">Su di noi</a></li>
-					<li><a href="coursesit.html">Corsi</a></li>
-					<li><a href="eventsit.html">Eventi</a></li>
+					<li><a href="indexit.php">Home</a></li>
+					<li><a href="aboutit.php">Su di noi</a></li>
+					<li><a href="coursesit.php">Corsi</a></li>
+					<li><a href="eventsit.php">Eventi</a></li>
 					<li><a href="newsit.php">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
